--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,13 @@ services:
       - ./deployment/mosquitto/data:/mosquitto/data
       - ./deployment/mosquitto/log:/mosquitto/log
 
+  mailhog:
+    image: mailhog/mailhog:latest
+    restart: unless-stopped
+    ports:
+      - "127.0.0.1:8025:8025"   # Web UI (private on server)
+      - "127.0.0.1:1025:1025"   # SMTP (private on server)
+
   backend:
     build:
       context: ./pds-netra-backend
@@ -20,6 +27,7 @@ services:
     depends_on:
       - mosquitto
       - embedding
+      - mailhog
     volumes:
       - ./deployment/data/backend:/opt/app/data
       - /data/pds-live:/data/pds-live
@@ -36,6 +44,7 @@ services:
       - backend
       - mosquitto
       - embedding
+      - mailhog
     volumes:
       - ./deployment/data/backend:/opt/app/data
       - /data/pds-live:/data/pds-live
