Shruti authorized user Fix and sync fix

--- a/deployment/env/backend.env.dev.example
+++ b/deployment/env/backend.env.dev.example
@@ -23,6 +23,9 @@ ENABLE_DISPATCH_PLAN_SYNC=true
 # Auth (dev mode)
 PDS_AUTH_DISABLED=true
 PDS_AUTH_TOKEN=demo-token
+# Service token for edge -> backend face-index sync.
+AUTHORIZED_USERS_SERVICE_TOKEN=demo-edge-token
+EDGE_BACKEND_TOKEN=demo-edge-token
 
 # API safety limits
 API_MAX_PAGE_SIZE=200
