--- a/deployment/env/backend.env.prod.example
+++ b/deployment/env/backend.env.prod.example
@@ -23,6 +23,10 @@ ENABLE_DISPATCH_PLAN_SYNC=false
 PDS_AUTH_DISABLED=false
 # Must be >= 20 chars and not demo/change-me; service will refuse weak values in prod.
 PDS_AUTH_TOKEN=change-me-strong-token
+# Service token used by edge for /api/v1/authorized-users/face-index (header-only Bearer token).
+# Preferred: set AUTHORIZED_USERS_SERVICE_TOKEN. Backward-compatible fallback is EDGE_BACKEND_TOKEN.
+AUTHORIZED_USERS_SERVICE_TOKEN=change-me-edge-service-token
+EDGE_BACKEND_TOKEN=change-me-edge-service-token
 
 # API safety limits
 API_MAX_PAGE_SIZE=200
