--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -64,6 +64,8 @@ services:
         "-c",
         "mkdir -p /root/.insightface/models && chmod 0777 /root/.insightface/models && uvicorn app.embedding_api:app --host 0.0.0.0 --port 19000",
       ]
+    environment:
+      INSIGHTFACE_MODEL_NAME: buffalo_l
 
   dashboard:
     build:
