Update for deepstream

--- a/pds-netra-edge/docker-compose.jetson.gpu.yml
+++ b/pds-netra-edge/docker-compose.jetson.gpu.yml
@@ -76,6 +76,8 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.deepstream.jp6
+      args:
+        - DEEPSTREAM_IMAGE=${EDGE_DEEPSTREAM_IMAGE:-nvcr.io/nvidia/deepstream:6.4-samples-multiarch}
     restart: unless-stopped
     working_dir: /opt/app
     env_file:
