Shruti add webhook

--- a/deployment/caddy/Caddyfile
+++ b/deployment/caddy/Caddyfile
@@ -1,6 +1,9 @@
 {$CADDY_DOMAIN} {
     encode gzip
 
+    # Meta webhook must bypass dashboard proxy and hit backend directly.
+    reverse_proxy /api/v1/meta/webhook/* backend:8001
+
     # Route all v1 API calls through Next.js API proxy.
     # This allows cookie session -> Authorization header translation.
     reverse_proxy /api/v1/* dashboard:3000
