--- a/pds-netra-dashboard/package.json
+++ b/pds-netra-dashboard/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.2",
     "lucide-react": "^0.563.0",
-    "next": "14.2.5",
+    "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "2.12.7"
@@ -21,8 +23,8 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^0.2.4",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4"
