--- a/deployment/env/backend.env.prod.example
+++ b/deployment/env/backend.env.prod.example
@@ -3,8 +3,8 @@ PDS_ENV=prod
 
 DATABASE_URL=postgresql+psycopg2://USER:PASS@HOST:PORT/DBNAME?sslmode=require
 
-# MQTT broker inside docker network
-MQTT_BROKER_HOST=mosquitto
+# MQTT settings (unused when ENABLE_MQTT_CONSUMER=false)
+MQTT_BROKER_HOST=127.0.0.1
 MQTT_BROKER_PORT=1883
 MQTT_USERNAME=your_mqtt_user
 MQTT_PASSWORD=your_mqtt_pass
