dvijisha add local face embedding support to backend

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,7 @@ services:
       - mosquitto
     volumes:
       - ./deployment/data/backend:/opt/app/data
+      - ./pds-netra-edge:/opt/pds-netra-edge
 
   backend-worker:
     build:
